2009-10-08  Daniel Bates  <dbates@webkit.org>

Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=30175

        The Windows DRT equivalent of DoDragDrop (i.e. UIDelegate::doDragDrop) does not return
        the OLE drag-and-drop return value like the function it emulates. Currently,
        UIDelegate::doDragDrop returns a hard-coded S_OK. Hence, the caller cannot determine
        whether the drag-and-drop operation was successful or was cancelled.

        This patch fixes this issue by having UIDelegate::doDragDrop return the OLE drag-and-drop
        return value according to whether the drop operation was successful or not.

        * DumpRenderTree/win/EventSender.cpp:
        (doMouseUp): Added parameter oleDragAndDropReturnValue.
        (replaySavedEvents): Ditto.
        * DumpRenderTree/win/EventSender.h:
        * DumpRenderTree/win/UIDelegate.cpp:
        (UIDelegate::doDragDrop): Modified to return OLE drag-and-drop return value.


Canonical link: https://commits.webkit.org/40895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49336 268f45cc-cd09-0410-ab3c-d52691b4dbfc