WebKitTools/DumpRenderTree/win/EventSender.h
@@ -31,11 +31,12 @@
 
 class DraggingInfo;
 
+typedef long HRESULT;
 typedef const struct OpaqueJSContext* JSContextRef;
 typedef struct OpaqueJSValue* JSObjectRef;
 
 JSObjectRef makeEventSender(JSContextRef context);
-void replaySavedEvents();
+void replaySavedEvents(HRESULT* oleDragAndDropReturnValue = 0);
 
 extern DraggingInfo* draggingInfo;
 
